fix malformed html

--- a/casuals/index.html
+++ b/casuals/index.html
@@ -48,7 +48,7 @@
 <hr class="spacer" />
 <h1>How do I get paid?</h1>
 
-<h2 id=""paydates>Casual pay dates and timecard approvals</h2>
+<h2 id="paydates">Casual pay dates and timecard approvals</h2>
 
 <p><a href="https://staff.unimelb.edu.au/abp/human-resources/casual-timecardspayslipspayment-summaries/YEAR-2016-CASUAL-PAY-DATES.pdf">Casual pay dates</a> fall fortnightly on a Thursday and your hours must be <strong>submitted and approved</strong> by your supervisor no later than Monday 4.00pm of the casual pay week. Ensure you submit your timecard no later than Friday 9.00am (before the Monday cut off) to give your supervisor sufficient time to approve.&nbsp;</p>
 
