add headings to jump nav, other small fixes

--- a/casuals/index.html
+++ b/casuals/index.html
@@ -8,6 +8,55 @@
   <!--[if lt IE 9]><script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script><![endif]-->
   <link rel="stylesheet" href="https://d2h9b02ioca40d.cloudfront.net/v4.4/uom.css">
   <script src="https://d2h9b02ioca40d.cloudfront.net/v4.4/uom.js"></script>
+  <style>
+.uomcontent [role="main"] .jump-navigation {
+  -moz-columns: 2;
+  -webkit-columns: 2;
+  columns: 2;
+}
+
+.uomcontent [role="main"] .jump-navigation li {
+  width: 100%;
+}
+
+.uomcontent [role="main"] .jump-navigation li:first-child {
+  display: none;
+}
+
+.uomcontent [role="main"] .jump-navigation li:before {
+  display: block;
+  padding-bottom: 7px;
+  padding-bottom: 0.4375rem;
+  padding-top: 7px;
+  padding-top: 0.4375rem;
+  margin-bottom: 7px;
+  margin-bottom: 0.4375rem;
+  border-bottom: 1px solid #e0e0e0;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+.uomcontent [role="main"] .jump-navigation li:nth-child(2):before {
+  content: "Contacts for queries";
+}
+
+.uomcontent [role="main"] .jump-navigation li:nth-child(6):before {
+  content: "How do I get paid?";
+}
+
+.uomcontent [role="main"] .jump-navigation li:nth-child(10):before {
+  content: "Facilities";
+}
+
+.uomcontent [role="main"] .jump-navigation li:nth-child(20):before {
+  content: "OH&S Training";
+}
+
+.uomcontent [role="main"] .jump-navigation li:nth-child(23):before {
+  content: "ABP Intranet";
+}
+  </style>
 </head>
 <body>
   <div class="uomcontent">
@@ -94,7 +143,7 @@
 <p>If your contract is renewed you will need to log a request via the Facilities online request form (see below) to have your access reinstated.</p>
 
 <p>• To have your card printed, take a copy of your contract and photo ID to Access Control located at 213 Grattan Street.<br />
-• To have your card activated, log a request via the Facilities page on the ABP intranet <a href="https://staff.unimelb.edu.au/abp/facilities/facilities-requests">https://staff.unimelb.edu.au/abp/facilities/facilities-requests</a> (You will need your username and password to login).<br />
+• To have your card activated, <a href="https://staff.unimelb.edu.au/abp/facilities/facilities-requests">log a request</a> via the Facilities page on the ABP intranet (You will need your username and password to login).<br />
 • Please allow 72 hours for the request to process and your card to begin working.</p>
 
 <h2 id="lecternkeys">Lectern Keys</h2>
@@ -120,7 +169,7 @@
 
 <p>All staff must supply their own padlock which must feature a shackle with a minimum diameter of 6mm. Padlocks with a smaller shackle will not work on these lockers.</p>
 
-<h2 id="mail">Mail Room/Stationery/Printing Facilities</h2>
+<h2 id="mail">Mail Room / Stationery / Printing Facilities</h2>
 
 <h3>Mail Room</h3>
 
@@ -160,7 +209,7 @@
 
 <h2 id="facilities">Contact ABP Facilities</h2>
 
-<p>If you have a Facilities related query, please visit the ABP Intranet Facilities page for further details: <a href="https://intranet.abp.unimelb.edu.au/business-services/facilities">https://intranet.abp.unimelb.edu.au/business-services/facilities</a>. If you cannot find the answer to your question, please send an email through to <a href="mailto:abp-facilities@unimelb.edu.au">abp-facilities@unimelb.edu.au</a> or call x46222 before you go to the office.</p>
+<p>If you have a Facilities related query, please <a href="https://intranet.abp.unimelb.edu.au/business-services/facilities">visit the ABP Intranet Facilities page</a> for further details. If you cannot find the answer to your question, please send an email through to <a href="mailto:abp-facilities@unimelb.edu.au">abp-facilities@unimelb.edu.au</a> or call x46222 before you go to the office.</p>
 
 <hr class="spacer" />
 <h1>Training</h1>
@@ -177,7 +226,7 @@
 
 <h3>Accessing Training Modules</h3>
 
-<p>Visit the Health and Safety website to access the modules and log in using your University username and password.</p>
+<p>Visit the <a href="http://safety.unimelb.edu.au/support/training/course-list.html">Health and Safety website</a> to access the modules and log in using your University username and password.</p>
 
 <p>New staff who do not yet have a UOM username and password can use the generic login details below:</p>
 
@@ -230,9 +279,9 @@
 &nbsp;</p>
 
 <ol>
-	<li>Complete and submit an online Student Medical Questionnaire form</li>
-	<li>View the Site and Safety Presentation</li>
-	<li>Complete their OHS training, comprised of three modules:
+	<li>Complete and submit an online <a href="http://edsc.unimelb.edu.au/m01-online-medical-questionnaire-form-campus-activity">Student Medical Questionnaire</a> form</li>
+	<li>View the <a href="http://edsc.unimelb.edu.au/sites/default/files/docs/site-safety_2015.pdf">Site and Safety Presentation</a></li>
+	<li>Complete their <a href="http://safety.unimelb.edu.au/#training">OHS training</a>, comprised of three modules:
 	<ul>
 		<li>OHS &amp; Environmental Roles and responsibilities for Supervisors and Managers</li>
 		<li>Risk Management</li>
