--- a/casuals/index.html
+++ b/casuals/index.html
@@ -50,7 +50,7 @@
 }
 
 .uomcontent [role="main"] .jump-navigation li:nth-child(20):before {
-  content: "OH&S Training";
+  content: "Training";
 }
 
 .uomcontent [role="main"] .jump-navigation li:nth-child(23):before {
